k8s/dev/svc.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: demo-pipeline
  name: demo-pipeline
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: demo-pipeline
  sessionAffinity: None
  type: ClusterIP
